--- a/web/css/site.css
+++ b/web/css/site.css
@@ -1,91 +1,156 @@
+/* line 8, ../scss/site.scss */
 html,
 body {
-	height: 100%;
+    height: 100%;
+    background-color: #FCFCFC;
 }
 
+/* line 13, ../scss/site.scss */
+#header {
+    background-color: #31c4f5;
+    border-radius: 0;
+    box-shadow: 1px 0 3px #999;
+}
+
+/* line 19, ../scss/site.scss */
+#nav-logo {
+    width: 200px;
+}
+
+/* line 23, ../scss/site.scss */
 .wrap {
-	min-height: 100%;
-	height: auto;
-	margin: 0 auto -60px;
-	padding: 0 0 60px;
+    min-height: 100%;
+    height: auto;
+    margin: 0 auto -60px;
+    padding: 0 0 60px;
 }
 
-.wrap > .container {
+/* line 28, ../scss/site.scss */
+.wrap + .container {
     padding: 70px 15px 20px;
 }
 
+/* line 33, ../scss/site.scss */
 .footer {
-	height: 60px;
-	background-color: #f5f5f5;
-	border-top: 1px solid #ddd;
-	padding-top: 20px;
+    height: 60px;
+    background-color: #f5f5f5;
+    border-top: 1px solid #ddd;
+    padding-top: 20px;
 }
 
+/* line 40, ../scss/site.scss */
 .jumbotron {
-	text-align: center;
-	background-color: transparent;
+    text-align: center;
+    background-color: transparent;
 }
 
+/* line 43, ../scss/site.scss */
 .jumbotron .btn {
-	font-size: 21px;
-	padding: 14px 24px;
+    font-size: 21px;
+    padding: 14px 24px;
 }
 
+/* line 49, ../scss/site.scss */
 .not-set {
-	color: #c55;
-	font-style: italic;
+    color: #c55;
+    font-style: italic;
 }
 
 /* add sorting icons to gridview sort links */
+/* line 55, ../scss/site.scss */
 a.asc:after, a.desc:after {
-	position: relative;
-	top: 1px;
-	display: inline-block;
-	font-family: 'Glyphicons Halflings';
-	font-style: normal;
-	font-weight: normal;
-	line-height: 1;
-	padding-left: 5px;
+    position: relative;
+    top: 1px;
+    display: inline-block;
+    font-family: 'Glyphicons Halflings', serif;
+    font-style: normal;
+    font-weight: normal;
+    line-height: 1;
+    padding-left: 5px;
 }
 
+/* line 66, ../scss/site.scss */
 a.asc:after {
-	content: /*"\e113"*/ "\e151";
+    content: "\e151";
 }
 
+/* line 70, ../scss/site.scss */
 a.desc:after {
-	content: /*"\e114"*/ "\e152";
+    content: "\e152";
 }
 
+/* line 74, ../scss/site.scss */
 .sort-numerical a.asc:after {
-	content: "\e153";
+    content: "\e153";
 }
 
+/* line 78, ../scss/site.scss */
 .sort-numerical a.desc:after {
-	content: "\e154";
+    content: "\e154";
 }
 
+/* line 82, ../scss/site.scss */
 .sort-ordinal a.asc:after {
-	content: "\e155";
+    content: "\e155";
 }
 
+/* line 86, ../scss/site.scss */
 .sort-ordinal a.desc:after {
-	content: "\e156";
+    content: "\e156";
 }
 
+/* line 90, ../scss/site.scss */
 .grid-view th {
     white-space: nowrap;
 }
 
+/* line 94, ../scss/site.scss */
 .hint-block {
-	display: block;
-	margin-top: 5px;
-	color: #999;
+    display: block;
+    margin-top: 5px;
+    color: #999;
 }
 
+/* line 100, ../scss/site.scss */
 .error-summary {
-	color: #a94442;
-	background: #fdf7f7;
-	border-left: 3px solid #eed3d7;
-	padding: 10px 20px;
-	margin: 0 0 15px 0;
+    color: #a94442;
+    background: #fdf7f7;
+    border-left: 3px solid #eed3d7;
+    padding: 10px 20px;
+    margin: 0 0 15px 0;
+}
+
+/* line 111, ../scss/site.scss */
+.program-list {
+    list-style-type: none;
+}
+
+/* line 112, ../scss/site.scss */
+.program-list li {
+    clear: both;
+}
+
+/* line 115, ../scss/site.scss */
+.program-list .start-time {
+    float: left;
+    width: 5rem;
+    font-size: 2rem;
+    font-family: 'Offside', cursive;
+}
+
+/* line 121, ../scss/site.scss */
+.program-list .title-wrap {
+    float: left;
+    width: 600px;
+    margin-bottom: 20px;
+    margin-left: 2rem;
+    padding: 2px 8px;
+    border-left: 1px solid rgba(0, 0, 0, 0.1);
+    box-shadow: -1px 0 0 white;
+}
+
+/* line 133, ../scss/site.scss */
+.program-list cite {
+    font-size: 2.5rem;
+    font-weight: bold;
 }
