--- a/web/scss/site.css
+++ b/web/scss/site.css
@@ -111,9 +111,13 @@ a.desc:after {
 
 .program-list .start-time {
     float: left;
-    width: 5rem;
+    width: 14rem;
     font-size: 2rem;
     font-family: 'Offside', cursive;
+}
+
+.program-list .start-time .label {
+    font-size: 1.05rem;
 }
 
 .program-list .title-wrap {
@@ -129,4 +133,8 @@ a.desc:after {
 .program-list cite {
     font-size: 2.5rem;
     font-weight: bold;
+}
+
+.story-count {
+    font-family: 'Offside', cursive;
 }
