--- a/web/scss/site.css
+++ b/web/scss/site.css
@@ -1,140 +1,134 @@
 html,
 body {
-    height: 100%;
-    background-color: #FCFCFC;
-}
+  height: 100%;
+  background-color: #FCFCFC; }
 
 #header {
-    background-color: #31c4f5;
-    border-radius: 0;
-    box-shadow: 1px 0 3px #999;
-}
+  background-color: #31c4f5;
+  border-radius: 0;
+  box-shadow: 1px 0 3px #999;
+  margin: 0; }
 
 #nav-logo {
-    width: 200px;
-}
+  width: 200px; }
 
 .wrap {
-    min-height: 100%;
-    height: auto;
-    margin: 0 auto -60px;
-    padding: 0 0 60px;
-}
-
-.wrap + .container {
-    padding: 70px 15px 20px;
-}
+  min-height: 100%;
+  height: auto;
+  margin: 0 auto -60px;
+  padding: 0 0 60px; }
+  .wrap + .container {
+    padding: 70px 15px 20px; }
 
 .footer {
-    height: 60px;
-    background-color: #f5f5f5;
-    border-top: 1px solid #ddd;
-    padding-top: 20px;
-}
+  height: 60px;
+  background-color: #f5f5f5;
+  border-top: 1px solid #ddd;
+  padding-top: 20px; }
 
 .jumbotron {
-    text-align: center;
-    background-color: transparent;
-}
-
-.jumbotron .btn {
+  text-align: center;
+  background-color: transparent; }
+  .jumbotron .btn {
     font-size: 21px;
-    padding: 14px 24px;
-}
+    padding: 14px 24px; }
 
 .not-set {
-    color: #c55;
-    font-style: italic;
-}
+  color: #c55;
+  font-style: italic; }
 
 /* add sorting icons to gridview sort links */
 a.asc:after, a.desc:after {
-    position: relative;
-    top: 1px;
-    display: inline-block;
-    font-family: 'Glyphicons Halflings';
-    font-style: normal;
-    font-weight: normal;
-    line-height: 1;
-    padding-left: 5px;
-}
+  position: relative;
+  top: 1px;
+  display: inline-block;
+  font-family: 'Glyphicons Halflings';
+  font-style: normal;
+  font-weight: normal;
+  line-height: 1;
+  padding-left: 5px; }
 
 a.asc:after {
-    content: "\e151";
-}
+  content: "\e151"; }
 
 a.desc:after {
-    content: "\e152";
-}
+  content: "\e152"; }
 
 .sort-numerical a.asc:after {
-    content: "\e153";
-}
+  content: "\e153"; }
 
 .sort-numerical a.desc:after {
-    content: "\e154";
-}
+  content: "\e154"; }
 
 .sort-ordinal a.asc:after {
-    content: "\e155";
-}
+  content: "\e155"; }
 
 .sort-ordinal a.desc:after {
-    content: "\e156";
-}
+  content: "\e156"; }
 
 .grid-view th {
-    white-space: nowrap;
-}
+  white-space: nowrap; }
 
 .hint-block {
-    display: block;
-    margin-top: 5px;
-    color: #999;
-}
+  display: block;
+  margin-top: 5px;
+  color: #999; }
 
 .error-summary {
-    color: #a94442;
-    background: #fdf7f7;
-    border-left: 3px solid #eed3d7;
-    padding: 10px 20px;
-    margin: 0 0 15px 0;
-}
+  color: #a94442;
+  background: #fdf7f7;
+  border-left: 3px solid #eed3d7;
+  padding: 10px 20px;
+  margin: 0 0 15px 0; }
 
 .program-list {
-    list-style-type: none;
-}
-
-.program-list li {
-    clear: both;
-}
-
-.program-list .start-time {
+  list-style-type: none; }
+  .program-list li {
+    clear: both; }
+  .program-list .start-time {
     float: left;
     width: 14rem;
     font-size: 2rem;
-    font-family: 'Offside', cursive;
-}
-
-.program-list .start-time .label {
-    font-size: 1.05rem;
-}
-
-.program-list .title-wrap {
+    font-family: 'Offside', cursive; }
+    .program-list .start-time .label {
+      font-size: 1.05rem; }
+  .program-list .title-wrap {
     float: left;
     width: 600px;
     margin-bottom: 20px;
     margin-left: 2rem;
     padding: 2px 8px;
     border-left: 1px solid rgba(0, 0, 0, 0.1);
-    box-shadow: -1px 0 0 white;
-}
-
-.program-list cite {
+    box-shadow: -1px 0 0 white; }
+  .program-list cite {
     font-size: 2.5rem;
-    font-weight: bold;
-}
+    font-weight: bold; }
 
 .story-count {
-    font-family: 'Offside', cursive;
-}
+  font-family: 'Offside', cursive; }
+
+#series-container-wrapper {
+  position: relative;
+  width: 100%;
+  margin: 0;
+  overflow: hidden; }
+  #series-container-wrapper h1 {
+    position: absolute;
+    top: 0;
+    background: #000;
+    color: #FFF;
+    padding: 16px 32px; }
+
+#series-container {
+  width: 120%; }
+
+.series-info {
+  position: absolute;
+  top: 250px;
+  width: 80%;
+  background-color: rgba(255, 255, 255, 0.9);
+  border-radius: 5px;
+  padding: 2rem 1rem; }
+
+.panel {
+  background-color: transparent; }
