--- a/web/scss/site.css
+++ b/web/scss/site.css
@@ -132,3 +132,11 @@ a.desc:after {
 
 .panel {
   background-color: transparent; }
+
+.no-checked {
+  color: #DDD;
+  text-shadow: -1px -1px 0 #999, 1px 1px 0 #FFF; }
+
+.checked {
+  color: #63dd38;
+  text-shadow: -1px -1px 0 #999, 1px 1px 0 #FFF; }
