--- a/web/scss/site.css
+++ b/web/scss/site.css
@@ -9,8 +9,11 @@ body {
   box-shadow: 1px 0 3px #999;
   margin: 0; }
 
+.navbar-brand {
+  padding: 5px; }
+
 #nav-logo {
-  width: 200px; }
+  height: 40px; }
 
 .wrap {
   min-height: 100%;
