--- a/web/scss/site.css
+++ b/web/scss/site.css
@@ -113,6 +113,7 @@ a.desc:after {
 #series-container-wrapper {
   position: relative;
   width: 100%;
+  height: 300px;
   margin: 0;
   overflow: hidden; }
   #series-container-wrapper h1 {
@@ -143,3 +144,15 @@ a.desc:after {
 .checked {
   color: #63dd38;
   text-shadow: -1px -1px 0 #999, 1px 1px 0 #FFF; }
+
+.favorite-anime-box {
+  background-color: #e0f2be; }
+
+.twitter-icon {
+  border-radius: 3px;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px; }
+
+.twitter-user-name {
+  margin-left: 0.5em;
+  color: white; }
