--- a/web/scss/site.scss
+++ b/web/scss/site.scss
@@ -17,9 +17,10 @@ body {
   margin: 0;
 }
 
-.navbar-brand{
+.navbar-brand {
   padding: 5px;
 }
+
 #nav-logo {
   height: 40px;
 }
@@ -150,6 +151,7 @@ h1 {
 #series-container-wrapper {
   position: relative;
   width: 100%;
+  height: 300px;
   margin: 0;
   overflow: hidden;
   h1 {
@@ -173,7 +175,8 @@ h1 {
   border-radius: 5px;
   padding: 2rem 1rem;
 }
-.panel{
+
+.panel {
   background-color: transparent;
 }
 
@@ -185,4 +188,19 @@ h1 {
 .checked {
   color: #63dd38;
   text-shadow: -1px -1px 0 #999, 1px 1px 0 #FFF;
+}
+
+.favorite-anime-box {
+  background-color: #e0f2be;
+}
+
+.twitter-icon {
+  border-radius: 3px;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+}
+
+.twitter-user-name {
+  margin-left: 0.5em;
+  color: white;
 }
